Changes - swagger documentation -improvements
