# app/Http/Controllers/ComplaintsController.php
@@ -219,29 +219,22 @@ class ComplaintsController extends Controller
      *     tags={"Complaints"},
      *     summary="Register complaint",
      *     description="Register complaint",
-     *     @OA\Parameter(
-     *         in="path",
-     *         name="code",
-     *         required=true,
-     *         @OA\Schema(type="string")
-     *     ),
      *     @OA\Response(
      *         response=200,
      *         description="OK",
      *         @OA\JsonContent(
      *              @OA\Property(property="id", type="number", example=1),
-     *              @OA\Property(property="code", type="string", example=""),
-     *              @OA\Property(property="identification", type="string", example=""),
-     *              @OA\Property(property="user_id", type="number", example=""),
-     *              @OA\Property(property="type", type="string", example=""),
-     *              @OA\Property(property="departments", type="string", example=""),
-     *              @OA\Property(property="anonymous", type="string", example=""),
-     *              @OA\Property(property="description", type="string", example=""),
-     *              @OA\Property(property="region", type="string", example=""),
-     *              @OA\Property(property="province", type="string", example=""),
-     *              @OA\Property(property="codmunicipalitye", type="string", example=""),
-     *              @OA\Property(property="address", type="string", example=""),
-     *              @OA\Property(property="priority", type="string", example=""),
+     *              @OA\Property(property="identification", type="string", example="00000000000"),
+     *              @OA\Property(property="user_id", type="number", example="1"),
+     *              @OA\Property(property="type", type="string", example="type"),
+     *              @OA\Property(property="departments", type="string", example="departments,m2"),
+     *              @OA\Property(property="anonymous", type="string", example="true"),
+     *              @OA\Property(property="description", type="string", example="description"),
+     *              @OA\Property(property="region", type="string", example="region"),
+     *              @OA\Property(property="province", type="string", example="province"),
+     *              @OA\Property(property="municipality", type="string", example="municipality"),
+     *              @OA\Property(property="address", type="string", example="address"),
+     *              @OA\Property(property="priority", type="string", example="priority"),
      *              @OA\Property(property="file", type="file", example=""),
      *              @OA\Property(property="created_at", type="string", example="2023-02-23T00:09:16.000000Z"),
      *              @OA\Property(property="updated_at", type="string", example="2023-02-23T12:33:45.000000Z")
